--- a/package.json
+++ b/package.json
@@ -1,38 +1,106 @@
 {
-  "name": "brickai",
-  "version": "0.1.0",
-  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "ok": "rm -rf .next node_modules bun.lockb && bun i && bun lint && bun run build && bun start",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev --turbo",
+    "lint": "prettier --plugin=prettier-plugin-tailwindcss -w . && next lint --fix",
+    "start": "next start"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.8",
-    "lucide-react": "^0.354.0",
-    "next": "14.1.3",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "@faker-js/faker": "latest",
+    "@formkit/auto-animate": "latest",
+    "@hookform/resolvers": "latest",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-avatar": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-context-menu": "latest",
+    "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-hover-card": "latest",
+    "@radix-ui/react-icons": "latest",
+    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-menubar": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
+    "@radix-ui/react-popover": "latest",
+    "@radix-ui/react-progress": "latest",
+    "@radix-ui/react-radio-group": "latest",
+    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-select": "latest",
+    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-slider": "latest",
+    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-switch": "latest",
+    "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-toast": "latest",
+    "@radix-ui/react-toggle": "latest",
+    "@radix-ui/react-toggle-group": "latest",
+    "@radix-ui/react-tooltip": "latest",
+    "@t3-oss/env-nextjs": "latest",
+    "@tanstack/react-query": "latest",
+    "@tanstack/react-table": "latest",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
+    "class-variance-authority": "latest",
+    "clsx": "latest",
+    "cmdk": "latest",
+    "cookies-next": "latest",
+    "date-fns": "latest",
+    "embla-carousel-react": "latest",
+    "flag-icons": "latest",
+    "framer-motion": "latest",
+    "input-otp": "latest",
+    "jotai": "latest",
+    "lucide-react": "latest",
+    "next": "latest",
+    "next-auth": "beta",
+    "next-themes": "latest",
+    "pluralize": "latest",
+    "react": "latest",
+    "react-day-picker": "latest",
+    "react-dom": "latest",
+    "react-hook-form": "latest",
     "react-just-parallax": "^3.1.16",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-resizable-panels": "latest",
+    "react-wrap-balancer": "latest",
+    "recharts": "latest",
+    "server-only": "latest",
+    "sharp": "latest",
+    "sonner": "latest",
+    "superjson": "latest",
+    "swr": "latest",
+    "tailwind-merge": "latest",
+    "tailwindcss-animate": "latest",
+    "use-sound": "latest",
+    "vaul": "latest",
+    "zod": "latest"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "@types/bun": "latest",
+    "@types/eslint": "latest",
+    "@types/node": "latest",
+    "@types/pluralize": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "eslint-plugin-simple-import-sort": "latest",
+    "eslint-plugin-tailwindcss": "latest",
+    "postcss": "latest",
+    "prettier": "latest",
+    "prettier-plugin-tailwindcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "latest"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.30.0"
   }
 }
