--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@faker-js/faker": "latest",
     "@formkit/auto-animate": "latest",
-    "@hookform/resolvers": "latest",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -22,7 +22,7 @@
     "@radix-ui/react-dropdown-menu": "latest",
     "@radix-ui/react-hover-card": "latest",
     "@radix-ui/react-icons": "latest",
-    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "latest",
     "@radix-ui/react-navigation-menu": "latest",
     "@radix-ui/react-popover": "latest",
@@ -30,9 +30,9 @@
     "@radix-ui/react-radio-group": "latest",
     "@radix-ui/react-scroll-area": "latest",
     "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "latest",
     "@radix-ui/react-tabs": "latest",
     "@radix-ui/react-toast": "latest",
@@ -64,7 +64,8 @@
     "react": "latest",
     "react-day-picker": "latest",
     "react-dom": "latest",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.51.1",
+    "react-icons": "^5.0.1",
     "react-just-parallax": "^3.1.16",
     "react-resizable-panels": "latest",
     "react-wrap-balancer": "latest",
@@ -78,7 +79,7 @@
     "tailwindcss-animate": "latest",
     "use-sound": "latest",
     "vaul": "latest",
-    "zod": "latest"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bun": "latest",
